Android/library/src/main/cpp/core/jni_helper.h

JavaVM* jnihelper_get_jvm();
JNIEnv* jnihelper_get_env();
// ===== 类 / 方法 / 字段查找 =====
jclass jnihelper_find_class(const char *class_name);
jmethodID jnihelper_get_method_id(jclass clazz, const char *method_name, const char *signature);
jmethodID jnihelper_get_static_method_id(jclass clazz, const char *method_name, const char *signature);
jfieldID jnihelper_get_field_id(jclass clazz, const char *field_name, const char *signature);
jfieldID jnihelper_get_static_field_id(jclass clazz, const char *field_name, const char *signature);
void jnihelper_delete_local_ref(jobject obj);
void jnihelper_delete_global_ref(jobject obj);
jclass jnihelper_get_object_class(jobject obj);
// ===== 异常 =====
jboolean jnihelper_check_exception();
// ===== 字符串 =====
jstring jnihelper_new_string(const char *str);
char* jnihelper_get_string(jstring jstr);
// ===== 实例方法调用 (无参简版) =====
jobject jnihelper_call_object_method(jobject obj, jmethodID methodID);
// ===== 静态方法调用 (无参简版) =====
jobject jnihelper_call_static_object_method(jclass clazz, jmethodID methodID);
// ===== 实例字段 Get/Set =====
jobject jnihelper_get_object_field(jobject obj, jfieldID fieldID);
// ===== 静态字段 Get/Set =====
jobject jnihelper_get_static_object_field(jclass clazz, jfieldID fieldID);
// ===== Unity 集成 =====
jobject jnihelper_get_current_activity();
jobject jnihelper_get_unity_surface();
struct ANativeWindow* jnihelper_get_unity_native_window();
jobject jnihelper_surface_to_native_window(jobject surface);
// ===== Input 事件 =====
uint32_t jnihelper_keyevent_get_unicode(AInputEvent *event);
// ===== Data 通道（C# <-> Java） =====
void jnihelper_set_data(const char *key, jint *data, int len);
int jnihelper_get_data_len(const char *key);
jint* jnihelper_get_data_buf(const char *key);